# sea-bmc-decompiled

./: .gitignore  CMakeLists.txt  README.md  verify.py.in
docker/: verify-c-common.Dockerfile
foo/: decompiled.c  foo.h  orig.c
seahorn/: CMakeLists.txt  sea.yaml  sea_cex_base.yaml
seahorn/include/: assert_helpers.h  foo_helper.h  nondet.h  verifier_types.h
seahorn/jobs/foo/: CMakeLists.txt  foo_harness.c  sea.yaml
seahorn/jobs/foo_flat/: CMakeLists.txt  foo_harness.c  sea.yaml
seahorn/lib/: CMakeLists.txt  assert_helpers.c  bcmp.c  foo_helper.c
